--- a/web/static/css/indexhome.scss
+++ b/web/static/css/indexhome.scss
@@ -128,8 +128,10 @@
               left: 0px;
               right: 0px;
               bottom: 0px;
+              top:0px;
               margin: auto;
               display: block;
+              text-align: center;
             }
           }
           .div2{
@@ -184,8 +186,10 @@
                 left: 0px;
                 right: 0px;
                 bottom: 0px;
+                top:0px;
                 margin: auto;
                 display: block;
+                text-align: center;
               }
             }
             .div2{
@@ -276,6 +280,7 @@
                 bottom: 0px;
                 margin: auto;
                 display: block;
+                text-align: center;
               }
             }
             .div2{
@@ -378,6 +383,70 @@
     border-right: 0;
   }
 }
+.APIdetail2_contain{
+  min-height: 500px;
+  padding: 30px 0 30px 50px;
+  position: relative;
+  .detail{
+    overflow: hidden;
+    .detail1{
+      width: 180px;
+      float: left;
+      color: #1085e4;
+      font-size: 14px;
+    }
+    .detail2{
+      width: 920px;
+      padding-left: 20px;
+      min-height: 400px;
+      float: left;
+      border-left: 1px solid #ccc;
+      color: #464646;
+      font-size: 14px;
+      .d1{
+        margin-bottom: 10px;
+        span{
+          display: inline-block;
+          width: 100px;
+          height: 26px;
+          line-height: 26px;
+          border-radius: 5px;
+          color: #fff;
+          background: #1085e4;
+          text-align: center;
+        }
+      }
+      .d2{
+        margin: 20px 0 10px 0;
+        font-size: 20px;
+      }
+      .details_contain{
+        height: 560px;
+        border: 1px solid #c9c9c9;
+        overflow-y: auto;
+        overflow-x: hidden;
+        pre{
+          background-color: #fff;
+          font-size: 14px;
+          border: 0;
+          color: #464646;
+          line-height: 3;
+          .jsonview{
+            .prop{
+              color: #464646;
+              font-size: 16px;
+            }
+            ul{
+              list-style: none;
+              margin: 0 0 0 2em!important;
+              padding: 0;
+            }
+          }
+        }
+      }
+    }
+  }
+}
 #APIdetail{
   width: 100%;
   background: #e2e5ec;
@@ -413,8 +482,10 @@
               left: 0px;
               right: 0px;
               bottom: 0px;
+              top:0px;
               margin: auto;
               display: block;
+              text-align: center;
             }
           }
           .div2{
@@ -485,70 +556,7 @@
           cursor: pointer;
         }
       }
-      .APIdetail2_contain{
-        min-height: 500px;
-        padding: 30px 0 30px 50px;
-        position: relative;
-        .detail{
-          overflow: hidden;
-          .detail1{
-            width: 180px;
-            float: left;
-            color: #1085e4;
-            font-size: 14px;
-          }
-          .detail2{
-            width: 920px;
-            padding-left: 20px;
-            min-height: 400px;
-            float: left;
-            border-left: 1px solid #ccc;
-            color: #464646;
-            font-size: 14px;
-            .d1{
-              margin-bottom: 10px;
-              span{
-                display: inline-block;
-                width: 100px;
-                height: 26px;
-                line-height: 26px;
-                border-radius: 5px;
-                color: #fff;
-                background: #1085e4;
-                text-align: center;
-              }
-            }
-            .d2{
-              margin: 20px 0 10px 0;
-              font-size: 20px;
-            }
-            .details_contain{
-              height: 560px;
-              border: 1px solid #c9c9c9;
-              overflow-y: auto;
-              overflow-x: hidden;
-              pre{
-                background-color: #fff;
-                font-size: 14px;
-                border: 0;
-                color: #464646;
-                line-height: 3;
-                .jsonview{
-                  .prop{
-                    color: #464646;
-                    font-size: 16px;
-                  }
-                  ul{
-                    list-style: none;
-                    margin: 0 0 0 2em!important;
-                    padding: 0;
-                  }
-                }
-              }
-            }
-          }
-        }
-      }
+
     }
   }
   .de1{
