--- a/web/static/template/indexhome.html
+++ b/web/static/template/indexhome.html
@@ -62,6 +62,24 @@
 <!--选择爬虫应用-->
 <div ng-include="'CrawlerApply.html'" id="Crawler" ng-controller="CrawlerApplycontroller" ng-if="crawler_close"></div>
 
+<!--修改密码 激活-->
+<div id="password" ng-if="openflag_1">
+    <div class="contain">
+        <div class="close"><span ng-click="closedpassword()">&times;</span></div>
+        <div class="title">修改密码</div>
+        <div class="input_name">
+            <input type="password" ng-model="loginInf.name11" placeholder="旧密码" autofocus="autofocus">
+        </div>
+        <div class="input_password">
+            <input type="password" ng-model="loginInf.password11" placeholder="新密码">
+        </div>
+        <div class="input_password">
+            <input type="password" ng-model="loginInf.password21" placeholder="确认密码">
+        </div>
+        <div class="login_error" ng-if="error">{{error_wenzi}}</div>
+        <div class="submit" ng-click="submitpassword()">确认</div>
+    </div>
+</div>
 <!--登录-->
 <div id="login" ng-if="openflag">
     <div class="contain" ng-if="openflag_LR=='login'">
