--- a/web/static/css/common.scss
+++ b/web/static/css/common.scss
@@ -324,6 +324,9 @@ input:-webkit-autofill {
       .active{
         background: #1085e4;
       }
+      .active1{
+        color: #1085e4;
+      }
       .blue{
         background: #1085e4;
       }
@@ -372,6 +375,10 @@ input:-webkit-autofill {
         color: #fff;
         li{
           list-style: inherit;
+          cursor: pointer;
+          &:hover{
+            color: #1085e4;
+          }
         }
       }
     }
