--- a/web/static/template/dir_classify.html
+++ b/web/static/template/dir_classify.html
@@ -2,11 +2,11 @@
     <div class="contain" ng-repeat="dd in DataCategory1" ng-class="{'zeromargin':($index+1)%5=='0'}">
         <div class="contain1">
             <div class="div1">
-                <lazy-src image-src="{{picurl}}"></lazy-src>
+                <lazy-src image-src="{{dd.imagepath}}"></lazy-src>
             </div>
-            <div class="div2">{{dd.apidesc}}</div>
-            <div class="div3">{{dd.remark}}</div>
-            <div class="div4" ui-sref="index.whaleAPI.APIdetail" ng-click="enterDetail(dd.apiId)">点击查看</div>
+            <div class="div2">{{dd.apiName}}</div>
+            <div class="div3">{{dd.apidesc}}</div>
+            <div class="div4" ui-sref="index.whaleAPI.APIdetail" ng-click="enterDetail(dd.apiId,dd)">点击查看</div>
         </div>
     </div>
     <api-loading></api-loading>
